--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <h1>Welcome to Our Cultural Event</h1>
+  <img src="Kalsiri Logo.png" alt="Event Logo"> <!-- Add your logo here -->
   <p>Explore our exciting events and register now!</p>
 </header>
 
@@ -55,4 +55,3 @@
 
 </body>
 </html>
-
